--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,41 +1,46 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    "strict": true,
+    "resolveJsonModule": true,
+    "target": "es5",
+    "module": "commonjs",
+    "strict": false,
     "jsx": "preserve",
+    "importHelpers": true,
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "useDefineForClassFields": true,
     "sourceMap": true,
     "baseUrl": ".",
-    "types": [
-      "webpack-env"
-    ],
+    "types": ["webpack-env"],
+    "allowJs": true,
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"],
+      "@assets/*": ["./src/assets/*"],
+      "@models/*": ["./src/models/*"],
+      "@components/*": ["./src/components/*"],
+      "@views/*": ["./src/views/*"],
+      "@layouts/*": ["./src/views/layouts/*"]
     },
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable",
-      "scripthost"
-    ]
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
+
+
+    // "module": "commonjs",// модуль генерации кода: "None", "CommonJS", "AMD", "System", "UMD", "ES6", "ES2015"или "ESNext"
+    //   "target": "es5",    //целевая версию ECMAScript  
+    //   "moduleResolution": "node",//тип импорта модулей (логика работы import from и required) http://www.typescriptlang.org/docs/handbook/module-resolution.html
+    //   //"esModuleInterop": true,
+    //   "lib": [//Список файлов библиотеки для включения в компиляцию.
+    //     "es2017", "dom"
+    // ],
   },
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx",
+    "**/*.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
